[package]
name = "egui-timeline"
version = "0.1.0"
edition = "2021"

[dependencies]
math = { path = "../../lib/math" }
map = { path = "../map" }
egui = { git = "https://github.com/emilk/egui", rev = "a9a6e0c2f223419d52a90cb3d40e211810caf1ee", features = ["serde"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "a9a6e0c2f223419d52a90cb3d40e211810caf1ee" }
