[package]
name = "api-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../../lib/api" }
ui-base = { path = "../../lib/ui-base" }
ui-traits = { path = "../../lib/ui-traits" }
graphics-types = { path = "../../lib/graphics-types" }
once_cell = "1.19.0"
egui = { git = "https://github.com/emilk/egui", rev = "a9a6e0c2f223419d52a90cb3d40e211810caf1ee", features = ["serde"] }
