[package]
name = "ui-base"
version = "0.1.0"
edition = "2021"

[dependencies]
base-io = { path = "../base-io" }
math = { path = "../math" }
graphics = { path = "../graphics" }
graphics-types = { path = "../graphics-types" }
hiarc = { path = "../hiarc", features = ["enable_egui"] }
egui = { git = "https://github.com/emilk/egui", rev = "a9a6e0c2f223419d52a90cb3d40e211810caf1ee", features = ["serde"] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "a9a6e0c2f223419d52a90cb3d40e211810caf1ee" }
serde = { version = "1.0.208", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }
